--- a/index.html
+++ b/index.html
@@ -159,6 +159,15 @@
 							I often enjoy sharing these thoughts with other people through outreach and creative projects. </p>
 
 							<div class="row">
+								<div class="col-12 col-12-mobile">
+									<article class="item">
+										<a href="https://www.steiermarkschau.at/schauplaetze/mobiler-pavillon" class="image fit"><img src="images/steiermark.png" alt="" /></a>
+										<header>
+											<h3> As a researcher at the Space Research Institute I participated in the STEIERMARK SCHAU as a 
+											contributing researcher through scientific advice, and by making video- and written contributions. </h3>
+										</header>
+									</article>
+								</div>
 								<div class="col-5 col-12-mobile">
 									<article class="item">
 										<a href="http://www.guardbridgebooks.co.uk/shop/index.php?rt=product/product&product_id=146" class="image fit"><img src="images/AroundDistantSuns.jpg" alt="" /></a>
