--- a/index.html
+++ b/index.html
@@ -93,11 +93,16 @@
 
 							<p> My main field of interest is astrobiology, the search for life in space, and I am especially interested in
 							how life might be discovered on distant exoplanets, by looking at so-called biosignatures in the atmospheres of the planets. 
-							In my current research I am trying to study how clouds affect the chemistry of exoplanet atmospheres, and how prebiotic
-							molecules (the precursors of life) might form in cloud droplets. During this project, I am doing experiments with
-							clouds in an atmosphere chamber, to look at how they form and develop under gamma and UV radiation. Later I plan
-							to implement these results in our computer models of atmospheres, so we can use the models to potentially identify
-							life when we look at the atmosphere of real exoplanets. </p>
+							In my current research, I am focussing less on the astrobiology and more on the atmospheric processes of exoplanets.
+							More specifically I am looking at how the radiative environment of a planet affects the chemistry and cloud formation of its 
+							atmosphere. This is done in two ways: 1) I have done experiments with clouds in an atmosphere chamber, to look
+							at how cloud particles behave under gamma radiation. This is important because clouds can have a huge effect on our observations 
+							of atmospheres as well as the climate of the planet, and understanding the cloud formation is therefore important to understand 
+							the planet. 2) I have done computer simulations of exoplanet atmospheres to model how different types of high-energy
+							radiation affect the chemistry of an atmosphere. This is important because exoplanets are found in many different environments
+							around different host stars and in different parts of the galaxy, which alters the radiation that reaches the planet. We know that 
+							radiation can change the atmospheric chemistry, and that these changes can in some cases look like biosignatures. In order to
+							recognize biosignatures, we therefore need to understand the environment of the planets we are looking at. </p>
 
 							<div class="row">
 								<div class="col-6 col-12-mobile">
