--- a/index.html
+++ b/index.html
@@ -227,7 +227,12 @@
 								<header>
 									<h3>Experience</h3>
 								</header>
-								<p><b><u> 2018 - 2020 - Master's degree in Physics | University of Copenhagen </b></u><br>
+								<p><b><u> 2020 - 2024 - PhD in Astrohysics | Austrian Academy of Sciences, Graz University of Technolog, and University of Copenhagen </b></u><br>
+								Early stage researcher at the Marie Curie ITN <a href="https://chameleon.iwf.oeaw.ac.at/">CHAMELEON</a>. <br>
+								Thesis on "Exoplanet atmospheres in high-energy radiative environments". <br>
+								Conducted experiments on the effect of gamma radiation on mineral cloud particles in an atmosphere chamber at DTU Space in collaboration with the University of Copenhagen. <br>
+								Modelled the effect of the radiative environment on the disequilibrium chemistry of exoplanet atmospheres at the Space Research Institute, Austrian Academy of Sciences. <br>
+								<b><u> 2018 - 2020 - Master's degree in Physics | University of Copenhagen </b></u><br>
 								Major in Astrophysics. Thesis on <em>"Atmospheric Disequilibrium Model - Model Development for Exoplanet Atmosphere Simulations"</em> <br>
 								Acted as local observer at La Silla Observatory for the MiNDSTEp consortium, with focus on microlensing and transit observations of exoplanets. <br>
 								Research project in astrobiology at <em> Virtual Planetary Laboratory </em> at the University of Washington. <br>
