--- a/index.html
+++ b/index.html
@@ -93,16 +93,19 @@
 
 							<p> My main field of interest is astrobiology, the search for life in space, and I am especially interested in
 							how life might be discovered on distant exoplanets, by looking at so-called biosignatures in the atmospheres of the planets. 
-							In my current research, I am focussing less on the astrobiology and more on the atmospheric processes of exoplanets.
-							More specifically I am looking at how the radiative environment of a planet affects the chemistry and cloud formation of its 
-							atmosphere. This is done in two ways: 1) I have done experiments with clouds in an atmosphere chamber, to look
-							at how cloud particles behave under gamma radiation. This is important because clouds can have a huge effect on our observations 
-							of atmospheres as well as the climate of the planet, and understanding the cloud formation is therefore important to understand 
-							the planet. 2) I have done computer simulations of exoplanet atmospheres to model how different types of high-energy
-							radiation affect the chemistry of an atmosphere. This is important because exoplanets are found in many different environments
-							around different host stars and in different parts of the galaxy, which alters the radiation that reaches the planet. We know that 
-							radiation can change the atmospheric chemistry, and that these changes can in some cases look like biosignatures. In order to
-							recognize biosignatures, we therefore need to understand the environment of the planets we are looking at. </p>
+							In my current research at the <a href="https://nbi.ku.dk/english/research/astrophysics/centre-for-exolife-sciences-cels/">Centre for ExoLife Sciences (CELS)</a> at UCPH,
+							we would like to study how known types metabolism ("breathing" of life) affects the atsmopheres of exoplanets. <br>
+							When life forms are breathing, they change the atsmopheres around them and thereby disturbs the chemical equilibrium there would otherwise be in the atmosphere. 
+							This creates a <em>chemical disequilibrium</em>, which might be one of our most promising biosignatures, since it is not specific for life on Earth, and might therefore
+							allow us to discover life that is very different from what we know from our own planet. <br>
+							To do this study, we are simulating the atmospheres on the computer, using a combination between our current atmosphere model, MARCS, and a newly added disequilibrium chemistry code, KROME. 
+							When these computer simulations are up and running (hopefully in the very near future) we will implement known types of metabolism into our disequilibirum code, 
+							so we can observe their effects on the simulated atmospheres. 
+							</p>
+
+							<header>
+								<h3>Selection of previous work</em></h3>
+							</header>
 
 							<div class="row">
 								<div class="col-6 col-12-mobile">
@@ -138,6 +141,22 @@
 									</article>
 								</div>
 							</div>
+
+							<header>
+								<h3>PhD - <em>"Exoplanet atmospheres in high-energy radiative environments"</em></h3>
+							</header>
+							
+							<p> In my PhD I was looking at how the radiative environment of a planet affects the chemistry and cloud formation of its 
+							atmosphere. We did this in two ways: 1) We did experiments with clouds in an atmosphere chamber, to look
+							at how cloud particles behave under gamma radiation. This is important because clouds can have a huge effect on our observations 
+							of atmospheres as well as the climate of the planet, and understanding the cloud formation is therefore important to understand 
+							the planet. 2) We did computer simulations of exoplanet atmospheres to model how different types of high-energy
+							radiation affect the chemistry of an atmosphere. This is important because exoplanets are found in many different environments
+							around different host stars and in different parts of the galaxy, which alters the radiation that reaches the planet. We know that 
+							radiation can change the atmospheric chemistry, and that these changes can in some cases look like biosignatures. In order to
+							recognize biosignatures, we therefore need to understand the environment of the planets we are looking at. </p>
+
+
 							
 							<header>
 								<h3>Publications</h3>
@@ -227,9 +246,11 @@
 								<header>
 									<h3>Experience</h3>
 								</header>
-								<p><b><u> 2020 - 2024 - PhD in Astrohysics | Austrian Academy of Sciences, Graz University of Technolog, and University of Copenhagen </b></u><br>
+								<p><b><u> 2025 - Current - Postdoc | Centre for ExoLife Sciences (CELS), University of Copenhagen </b></u><br>
+								Model development on a combined radiative transfer and disequilibrium chemistry code to study the effect of known metabolisms on exoplanet atmospheres under Earth-like conditions. <br>
+								<b><u> 2020 - 2024 - PhD in Astrohysics | Austrian Academy of Sciences, Graz University of Technolog, and University of Copenhagen </b></u><br>
 								Early stage researcher at the Marie Curie ITN <a href="https://chameleon.iwf.oeaw.ac.at/">CHAMELEON</a>. <br>
-								Thesis on "Exoplanet atmospheres in high-energy radiative environments". <br>
+								Thesis on <em>"Exoplanet atmospheres in high-energy radiative environments"</em>em>. <br>
 								Conducted experiments on the effect of gamma radiation on mineral cloud particles in an atmosphere chamber at DTU Space in collaboration with the University of Copenhagen. <br>
 								Modelled the effect of the radiative environment on the disequilibrium chemistry of exoplanet atmospheres at the Space Research Institute, Austrian Academy of Sciences. <br>
 								<b><u> 2018 - 2020 - Master's degree in Physics | University of Copenhagen </b></u><br>
