--- a/index.html
+++ b/index.html
@@ -66,11 +66,9 @@
 
 							<header>
 								<h2 class="alt">Welcome!</h2>
-								<p> Hi, my name is Nanna, and I am a PhD student at the 
-								<a href="https://www.ku.dk/english/">University of Copenhagen</a>, 
-								<a href="https://www.oeaw.ac.at/iwf/home">Austrian Academy of Sciences</a>,
-								and <a href="https://www.tugraz.at/home/">Graz University of Technology</a>, as well as an early
-								stage researcher at the Marie Curie ITN <a href="https://chameleon.iwf.oeaw.ac.at/">CHAMELEON</a>. 
+								<p> Hi, my name is Nanna, and I am a postdoc at the 
+								<a href="https://www.ku.dk/english/">University of Copenhagen</a> working with exoplanet atmospheres
+								and astrobiology. <br> 
 								If you would like to know more about what I'm doing, you are welcome to take a look at some of 
 								my projects below, or contact me at nanna.bach.moeller@nbi.ku.dk.</p>
 							</header>
