--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
 							</header>
 
 							<p> My main field of interest is astrobiology, the search for life in space, and I am especially interested in
-							how life might be discovered on distant exoplanets, by looking at so-called biosignatures in the atmospheres of the planets. 
+							how life might be discovered on distant exoplanets, by looking at so-called biosignatures in the atmospheres of the planets. <br>
 							In my current research at the <a href="https://nbi.ku.dk/english/research/astrophysics/centre-for-exolife-sciences-cels/">Centre for ExoLife Sciences (CELS)</a> at UCPH,
-							we would like to study how known types metabolism ("breathing" of life) affects the atsmopheres of exoplanets. <br>
-							When life forms are breathing, they change the atsmopheres around them and thereby disturbs the chemical equilibrium there would otherwise be in the atmosphere. 
-							This creates a <em>chemical disequilibrium</em>, which might be one of our most promising biosignatures, since it is not specific for life on Earth, and might therefore
+							we would like to study how known types metabolism ("breathing" of life) affects the atsmopheres of exoplanets. 
+							When life forms are breathing, they change the atsmopheres around them and thereby disturbs the chemical equilibrium that would otherwise be in the atmosphere. 
+							This creates a <em>chemical disequilibrium</em>, which might be one of our most promising biosignatures, since it is not specific for life on Earth, and can therefore
 							allow us to discover life that is very different from what we know from our own planet. <br>
-							To do this study, we are simulating the atmospheres on the computer, using a combination between our current atmosphere model, MARCS, and a newly added disequilibrium chemistry code, KROME. 
+							In our research, we are simulating exoplanet atmospheres on the computer, using a combination between our current atmosphere model, MARCS, and a newly added disequilibrium chemistry code, KROME. 
 							When these computer simulations are up and running (hopefully in the very near future) we will implement known types of metabolism into our disequilibirum code, 
 							so we can observe their effects on the simulated atmospheres. 
 							</p>
